# sel4_uros

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: build_libvmm.cmake  build_sddf.cmake  build_uros_libs.cmake  musllibc.cmake  repack_initrd.cmake  toolchain-aarch64-none-elf.cmake  uros_example.cmake
scripts/: build_uros.sh  generate_vm_images.sh  pack_microros.py  repack_initrd.sh  run.sh  setup.sh  test.sh  update_colcon.py  validate_example.py
scripts/vm_files/: busybox.config  kernel.config  linux.dts
scripts/vm_files/rootfs/etc/: fstab  hostname  inittab  protocols  services
scripts/vm_files/rootfs/etc/init.d/: rcK  rcS
scripts/vm_files/rootfs/etc/network/: interfaces
scripts/vm_files/rootfs/etc/network/if-pre-up.d/: wait_iface
src/examples/: CMakeLists.txt  S100_ros_agent  transport_common.c  transport_common.h  uros_app.xml
src/examples/int32_pubsub/: int32_pubsub.c
src/examples/ping_pong/: CMakeLists.txt  S00_mounts  ping_pong.c  ping_pong.xml
src/examples/ping_uros_agent/: ping_uros_agent.c
src/examples/string_pubsub/: string_pubsub.c
src/stubs/: CMakeLists.txt  clock.c  emutls.c  syscalls.c
src/utils/: CMakeLists.txt  is_port_open.c  networking.h  spsc_queue.h
src/vmm/: CMakeLists.txt  vmm.c
